--- a/css/questions-and-answers.css
+++ b/css/questions-and-answers.css
@@ -65,12 +65,6 @@ padding-bottom: 150px;
   border: 3px solid #23C086;
 }
 
-.card-pic-format img{
-  transform: scale(1.5);
-  max-width: 100%;
-  min-width: 100%;
-} 
-
 .card-format-shadow{
   box-shadow: 0px 39px 61px -15px rgba(0,0,0,0.5);
 }
@@ -168,6 +162,7 @@ padding-bottom: 150px;
 
   @media (max-width: 768px) {
     h1{
+        font-size: 2em;
         text-align: left;
         margin: 0px;
     }
